Fixed text alignment for the About Me section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,10 +147,6 @@ section {
     object-fit: cover;
 }
 
-.intro {
-    border-bottom: 3px solid;
-}
-
 @media screen and (max-width: 980px) {
     header {
         padding-bottom: 0;
@@ -217,6 +213,11 @@ section {
  
     .section-title {
         width: 95%;
+    }
+
+    .intro {
+        border-bottom: 3px solid;
+        text-align: center;
     }
  
     .intro p {
